--- a/client/src/layout/doner.css
+++ b/client/src/layout/doner.css
@@ -13,8 +13,8 @@
     margin: 1rem;
     box-shadow: 0px 2px 2px 0px #DDDDDDBF;
     background: #FFFFFF;
-    width: 520px;
-    height: 15.5rem;
+    width: 20vw;
+    height: 26vh;
     border-radius: 10px
 }
 .card-inner{
