--- a/client/src/Pages/donerPage.css
+++ b/client/src/Pages/donerPage.css
@@ -22,3 +22,9 @@
 .doner-1-2 h3 {
     padding-bottom: 1rem;
 }
+.doner-1-4{
+    color: #495057;
+    text-align: center;
+    margin: 2rem;
+    padding: 0 8rem;
+}
