--- a/client/src/Pages/donerPage.css
+++ b/client/src/Pages/donerPage.css
@@ -1,4 +1,4 @@
-.doner-1-1:img{
+.doner-1-1 img{
     max-width: 100vw;
 }
 .doner-1-3{
@@ -27,4 +27,14 @@
     text-align: center;
     margin: 2rem;
     padding: 0 8rem;
+}
+
+.doner-1-5{
+    display: flex;
+    justify-content: space-around;
+    padding: 0 5rem;
+    margin: 3rem 0;
+}
+.doner-1-5 img{
+    width: 25vw;
 }
