--- a/client/src/components/button.css
+++ b/client/src/components/button.css
@@ -3,12 +3,16 @@
     align-items: center;
     justify-content: center;
     border-radius        : 10px;
-    color                : #ffffff;
     font-size            : 20px;
     background           : #E385A7;
     padding              : 10px 20px 10px 20px;
     width: 12rem;
     height: 4rem;
+    color : #ffffff;
+}
+.btn a{
+    text-decoration: none;
+    color : #ffffff;
 }
 
 .btn:hover {
