--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -3,7 +3,6 @@
     box-shadow: 0px 2px 8px 0px #00000040;
     padding: 0 5rem;
 }
-
 .Header-Size{
     max-width: 70vw;
 }
@@ -21,15 +20,31 @@
     border       : 1px solid #E385A7;
 }
 
-
-
+@media only screen and (min-width : 1400px) {
+    .bar {
+        margin-left    : 30%;
+    }
+}
 
 @media only screen and (min-width : 990px) {
     .bar {
-        margin-left: 30%;
         width: 75vw;
         display        : flex;
         align-items    : center;
         justify-content: space-evenly;
-        }
     }
+}
+
+@media only screen and (max-width: 425px) {
+    .header{
+        padding: 0 2rem;
+    }
+    .headerImg{
+        width: 12rem;
+    }
+    .headerBtn{
+        margin-left: 5rem;
+        display: flex;
+        justify-content: center;
+    }
+}
