--- a/client/src/layout/doner.css
+++ b/client/src/layout/doner.css
@@ -31,3 +31,23 @@
     justify-content: space-around;
     margin: 1rem;
 }
+
+@media only screen and (max-width: 425px) {
+    .don{
+        padding: 0 2rem;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+    .doner{
+        flex-direction: column;
+    }
+    .card-d{
+        width: 18rem;
+        height: 12rem;
+    }
+    .del-1{
+        display: none;
+    }
+}
