--- a/client/src/layout/volunteer.css
+++ b/client/src/layout/volunteer.css
@@ -14,3 +14,19 @@
     text-align: justify;
     width: 20vw;
 }
+.test-pic{
+    padding: 0 0.5rem;
+    width: 25vw;
+}
+
+@media only screen and (max-width: 425px) {
+    .vol-h{
+        margin: 0 1rem;
+    }
+    .vol-1{
+        flex-direction: column;
+    }
+    .card-vol{
+        width: 20rem;
+    }
+}
