--- a/client/src/Pages/signup.css
+++ b/client/src/Pages/signup.css
@@ -1,5 +1,5 @@
 .signup{
-    min-height: 62.5vh;
+    min-height: 62vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -11,4 +11,10 @@
     justify-content: center;
     align-items: center;
     padding-top: 2rem;
+}
+
+@media only screen and (max-width: 425px) {
+    .sign-c {
+        width: 20rem;
+    }
 }
