--- a/client/src/layout/stats.css
+++ b/client/src/layout/stats.css
@@ -31,3 +31,16 @@
     text-align: center;
     width: 20rem;
 }
+
+@media only screen and (max-width: 425px) {
+    .stat{
+        padding: 2rem;
+    }
+    .card-s{
+        height: 9rem;
+    }
+    .card-s img{
+        margin-top: 1.25rem;
+        height: 3rem;
+    }
+}
