--- a/client/src/layout/working.css
+++ b/client/src/layout/working.css
@@ -15,3 +15,13 @@
     justify-content: center;
     margin-top: 4rem;
 }
+
+@media only screen and (max-width: 425px) {
+    .work{
+        flex-direction: column;
+        align-items: center;
+    }
+    .card{
+        width: 20rem;
+    }
+}
